--- a/package.json
+++ b/package.json
@@ -15,11 +15,11 @@
     "clsx": "^2.1.1",
     "dotenv": "^17.2.3",
     "lucide-react": "^0.460.0",
-    "next": "15.0.3",
+    "next": "^16.0.10",
     "next-auth": "^4.24.10",
     "prisma": "^6.0.0",
-    "react": "19.0.0-rc-66855b96-20241106",
-    "react-dom": "19.0.0-rc-66855b96-20241106",
+    "react": "^19.2.3",
+    "react-dom": "^19.2.3",
     "tailwind-merge": "^2.5.4"
   },
   "devDependencies": {
@@ -30,7 +30,7 @@
     "autoprefixer": "^10.4.23",
     "dotenv-cli": "^11.0.0",
     "eslint": "^8",
-    "eslint-config-next": "15.0.3",
+    "eslint-config-next": "^16.0.10",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
     "tsx": "^4.19.2",
